--- a/clothes/templates/clothes/base.html
+++ b/clothes/templates/clothes/base.html
@@ -14,59 +14,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static "clothes/base.css" %}"/>
 
-
-
-
     {% block css_files %}
   
     {% endblock %}
-
-<script>
-
-  function actualizarCantidad(size_pk, accion) {
-    // Crear objeto XMLHttpRequest para enviar solicitud AJAX
-    var xhr = new XMLHttpRequest();
-    xhr.open("POST", "/sales-cart", true); 
-    xhr.setRequestHeader("Content-Type", "application/json");
-    xhr.setRequestHeader("X-CSRFToken", "{{ csrf_token }}"); 
-
-    // Al recibir respuesta, actualizar la interfaz
-    xhr.onload = function () {
-        if (xhr.status === 200) {
-            var response = JSON.parse(xhr.responseText); 
-            var quantity = response.quantity;
-            var total_price = response.total_price;
-            var sum_prices = response.sum_prices;
-
-            // Actualizar el precio total del ítem
-            document.getElementById("total_price_" + size_pk).textContent = total_price.toFixed(2);
-
-            // Actualizar la cantidad en el campo de entrada
-            document.getElementById("cant_product_" + size_pk).value = quantity;
-
-            // Actualizar el total general
-            var sum_prices = 0;
-            document.querySelectorAll(".total_price").forEach(function (el) {
-                total_general += parseFloat(el.textContent);
-            });
-            document.getElementById("total_general").textContent = sum_prices.toFixed(2);
-        }
-      } 
-    };
-
-    // Enviar la solicitud POST con el ID de la talla y la acción a realizar
-    var data = {
-      'size_pk': size_pk,
-      'accion': accion
-    };
-    
-
-  xhr.send(JSON.stringify(data));
-
-
-</script>
-
-
 </head>
 <body>
     {% include "clothes/includes/header.html" %}
@@ -90,4 +40,7 @@
 <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+ 
+</body>
 </html>
